[package]
name = "ffprobe"
description = "Typed wrapper for the ffprobe CLI"
version = "0.5.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
repository = "https://github.com/theduke/ffprobe-rs"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.38", features = ["process"], optional = true }

[features]
default = ["chapters", "format", "streams"]
streams = []
format = []
chapters = []

async = ["dep:tokio"]
codec_tag_string = []

__internal_deny_unknown_fields = []
