[package]
name = "easy-ffprobe"
description = "Typed wrapper for the ffprobe CLI. This is a fork of the original ffprobe-rs crate, which is no longer maintained."
version = "0.5.1"
authors = ["Christoph Herzog <chris@theduke.at>"]
repository = "https://github.com/theduke/ffprobe-rs"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["process"], optional = true }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["chapters", "format", "streams"]
streams = []
format = []
chapters = []

async = ["dep:tokio"]

__internal_deny_unknown_fields = []
