[package]
name = "ffprobe"
description = "Typed wrapper for the ffprobe CLI"
version = "0.4.1"
authors = ["Christoph Herzog <chris@theduke.at>"]
repository = "https://github.com/theduke/ffprobe-rs"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
defaults = []
async-tokio = ["tokio", "url"]
# Generate structs with #[serde(deny_unknown_fields)]
# Only useful for testing!
__internal_deny_unknown_fields = []

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
url = { version = "2.5.0", optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = true }
